--- a/health_form/webapp/reactjs/vite/src/index.css
+++ b/health_form/webapp/reactjs/vite/src/index.css
@@ -19,6 +19,7 @@ a {
   color: #646cff;
   text-decoration: inherit;
 }
+
 a:hover {
   color: #535bf2;
 }
@@ -43,13 +44,10 @@ body {
   align-items: center;
 }
 
-.title {
-  
-}
+.title {}
 
 table {
   border: 1px solid gray;
-
 }
 
 thead {
@@ -86,7 +84,7 @@ td {
 }
 
 .container>.form>div label {
-  font-weight: bold ;
+  font-weight: bold;
 }
 
 .container>.form>div input {
@@ -146,9 +144,11 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
 button:hover {
   border-color: #646cff;
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
@@ -159,9 +159,11 @@ button:focus-visible {
     color: #213547;
     background-color: #e0dbdb;
   }
+
   a:hover {
     color: #747bff;
   }
+
   button {
     background-color: #716a6a;
   }
