--- a/javascript/reactjs/plugins/main-app-pluggable/src/index.css
+++ b/javascript/reactjs/plugins/main-app-pluggable/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 .button_action {
-  @apply bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded;
+  @apply bg-blue-500 hover: bg-blue-700 text-white font-bold py-2 px-4 rounded;
 }
 
 :root {
@@ -27,6 +27,7 @@ a {
   color: #646cff;
   text-decoration: inherit;
 }
+
 a:hover {
   color: #535bf2;
 }
@@ -55,23 +56,30 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
 button:hover {
   border-color: #646cff;
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+#actions {
+  border: 1px solid red;
+}
 
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
     background-color: #ffffff;
   }
+
   a:hover {
     color: #747bff;
   }
+
   button {
     background-color: #f9f9f9;
   }
