--- a/javascript/reactjs/plugins/main-app-pluggable/src/index.css
+++ b/javascript/reactjs/plugins/main-app-pluggable/src/index.css
@@ -49,7 +49,7 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #383838;
   cursor: pointer;
   transition: border-color 0.25s;
 }
@@ -64,5 +64,4 @@ button:focus-visible {
 }
 
 #actions {
-  border: 1px solid red;
 }
