--- a/javascript/reactjs/simple_chat/client1/src/index.css
+++ b/javascript/reactjs/simple_chat/client1/src/index.css
@@ -35,6 +35,7 @@ body {
     /* place-items: center; */
     /* min-width: 320px; */
     min-height: 100vh;
+    color: #272525;
 }
 
 h1 {
@@ -45,13 +46,15 @@ h1 {
 button {
     border-radius: 8px;
     border: 1px solid transparent;
-    padding: 0.6em 1.2em;
+    padding: .6em;
+    margin: .2em;
     font-size: 1em;
     font-weight: 500;
     font-family: inherit;
     background-color: #1a1a1a;
     cursor: pointer;
     transition: border-color 0.25s;
+    color: rgb(194, 188, 188)
 }
 
 button:hover {
@@ -108,7 +111,7 @@ button:focus-visible {
 }
 
 .chat-header {
-    background-color: #4caf50;
+    /* background-color: #4caf50; */
     padding: 10px;
     text-align: center;
     color: #ffffff;
@@ -134,8 +137,9 @@ button:focus-visible {
     bottom: 0;
     width: 100%;
     padding: 10px;
-    background-color: #ffffff;
+    background-color: #96adc8;
     display: flex;
+    border-top: 1px solid #98cbfa;
 }
 
 #message-form {
@@ -171,7 +175,7 @@ button:focus-visible {
 
 @media (prefers-color-scheme: dark) {
     :root {
-        color: #213547;
+        /* color: #213547; */
         background-color: #ffffff;
     }
 
@@ -180,6 +184,6 @@ button:focus-visible {
     }
 
     button {
-        background-color: #f9f9f9;
+        background-color: #3b3636;
     }
 }
