--- a/javascript/reactjs/simple_chat/client1/src/index.css
+++ b/javascript/reactjs/simple_chat/client1/src/index.css
@@ -17,6 +17,11 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     -webkit-text-size-adjust: 100%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 a {
@@ -32,10 +37,15 @@ a:hover {
 body {
     margin: 0;
     display: flex;
+    flex-direction: column;
+    justify-content: stretch;
     /* place-items: center; */
     /* min-width: 320px; */
     min-height: 100vh;
     color: #272525;
+
+    width: 100vw;
+    max-width: 1024px;
 }
 
 h1 {
@@ -104,10 +114,11 @@ button:focus-visible {
 .chat-container {
     display: flex;
     flex-direction: column;
-    height: 100%;
-    width: 100%;
+    /* height: 100%; */
+    /* width: 100%; */
     /* position: relative; */
-    width: 100vw;
+    /* min-width: 640px; */
+
 }
 
 .chat-header {
@@ -129,12 +140,13 @@ button:focus-visible {
     overflow-y: auto;
     margin-bottom: 10px;
     /* border: 1px solid red; */
-    height: calc(100vh - 120px);
+    height: calc(100vh - 150px);
+    overflow-x: hidden;
 }
 
 .chat-input {
-    position: fixed;
-    bottom: 0;
+    /* position: fixed; */
+    /* bottom: 0; */
     width: 100%;
     padding: 10px;
     background-color: #96adc8;
@@ -152,6 +164,7 @@ button:focus-visible {
     padding: 5px;
     border: 1px solid #ccc;
     border-radius: 3px;
+    color: #e7e6e6;
 }
 
 .new-messages-overlay {
